fixed seaborn whitegrid error

--- a/starter-notebook.ipynb
+++ b/starter-notebook.ipynb
@@ -25,7 +25,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Set plot styling\n",
-    "plt.style.use('seaborn-whitegrid')\n",
+    "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "sns.set_palette('viridis')\n",
     "%matplotlib inline"
    ]
