--- a/starter-notebook.ipynb
+++ b/starter-notebook.ipynb
@@ -41,9 +41,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Global Average Temperature (°C)</th>\n",
+       "      <th>CO2 Concentration (ppm)</th>\n",
+       "      <th>Sea Level Rise (mm)</th>\n",
+       "      <th>Arctic Ice Area (million km²)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1948</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>397.04</td>\n",
+       "      <td>116.25</td>\n",
+       "      <td>5.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>13.10</td>\n",
+       "      <td>313.17</td>\n",
+       "      <td>277.92</td>\n",
+       "      <td>9.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>14.67</td>\n",
+       "      <td>311.95</td>\n",
+       "      <td>290.32</td>\n",
+       "      <td>8.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1966</td>\n",
+       "      <td>14.79</td>\n",
+       "      <td>304.25</td>\n",
+       "      <td>189.71</td>\n",
+       "      <td>11.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>13.15</td>\n",
+       "      <td>354.52</td>\n",
+       "      <td>14.84</td>\n",
+       "      <td>11.23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Global Average Temperature (°C)  CO2 Concentration (ppm)  \\\n",
+       "0  1948                            13.17                   397.04   \n",
+       "1  1996                            13.10                   313.17   \n",
+       "2  2015                            14.67                   311.95   \n",
+       "3  1966                            14.79                   304.25   \n",
+       "4  1992                            13.15                   354.52   \n",
+       "\n",
+       "   Sea Level Rise (mm)  Arctic Ice Area (million km²)  \n",
+       "0               116.25                           5.97  \n",
+       "1               277.92                           9.66  \n",
+       "2               290.32                           8.40  \n",
+       "3               189.71                          11.83  \n",
+       "4                14.84                          11.23  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the dataset\n",
     "df = pd.read_csv('./data/Climate_Change_Indicators.csv') # Place the correct path to the file you are reading here (Make sure to load using the relative path)\n",
@@ -72,7 +166,19 @@
    "outputs": [],
    "source": [
     "# TODO: Aggregate data by year to create a 124-year time series\n",
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "# Ensure 'Year' is treated as an integer\n",
+    "df['Year'] = df['Year'].astype(int)\n",
+    "\n",
+    "# Aggregate data by Year with different functions\n",
+    "df_new = df.groupby('Year').mean().reset_index()\n",
+    "\n",
+    "# Display the first few rows\n",
+    "print(df_new.head())\n",
+    "\n",
+    "# Save to a CSV file\n",
+    "df_new.to_csv('aggregated_data.csv', index=False)"
    ]
   },
   {
