added conclusion for UA

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4                14.84                          11.23  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO: Write your conclusions here"
+    "### 5.1 Conclusion and Insights of Univariate Analysis\n",
+    "\n",
+    "#### A. Global Average Temperature (°C)\n",
+    "\n",
+    "The mean and median are both 14.50°C, indicating a symmetrical distribution with minimal fluctuations.\n",
+    "The standard deviation is extremely low (0.01°C), showing that temperature changes are minimal in this dataset.\n",
+    "The range is only 0.05°C, suggesting very little variation in global average temperatures.\n",
+    "\n",
+    "Insight: The temperature data is highly stable with negligible variation, but even small changes can have significant climate impacts over time\n",
+    "\n",
+    "#### B. CO₂ Concentration (ppm)\n",
+    "\n",
+    "The mean CO₂ concentration is 350.03 ppm, with a median of 350.02 ppm, showing a near-normal distribution.\n",
+    "The range (2.36 ppm) indicates a slight variation in CO₂ levels.\n",
+    "The standard deviation (0.46 ppm) suggests minor fluctuations.\n",
+    "\n",
+    "Insight: The data indicates a consistent increase in CO₂ levels, which could be a contributing factor to global temperature changes.\n",
+    "\n",
+    "#### C. Sea Level Rise (mm)\n",
+    "\n",
+    "The mean sea level is 149.99 mm, with a median of 149.92 mm, showing a slight positive skew.\n",
+    "The range is 4.62 mm, indicating moderate variation.\n",
+    "The standard deviation (1.03 mm) suggests some fluctuation in sea levels over time.\n",
+    "\n",
+    "Insight: Rising sea levels, even in small increments, can have severe consequences, such as increased coastal flooding and habitat loss.\n",
+    "\n",
+    "#### D. Arctic Ice Area (million km²)\n",
+    "\n",
+    "The mean and median are both 9.00 million km², showing a balanced distribution.\n",
+    "The range is 0.21 million km², indicating minor fluctuations.\n",
+    "The low standard deviation (0.04 million km²) suggests minimal changes in Arctic ice area during this period.\n",
+    "\n",
+    "Insight: While the data suggests stability, even small decreases in Arctic ice can accelerate global warming due to reduced albedo effect (less ice means more heat absorption by oceans).\n"
    ]
   },
   {
@@ -531,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
