--- a/starter-notebook.ipynb
+++ b/starter-notebook.ipynb
@@ -14,9 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/Shikhar Paudel/AppData/Local/Programs/Python/Python313/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# Import required libraries\n",
     "import pandas as pd\n",
@@ -25,7 +36,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Set plot styling\n",
-    "#plt.style.use('seaborn-whitegrid')\n",
+    "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "sns.set_palette('viridis')\n",
     "%matplotlib inline"
    ]
@@ -629,7 +640,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -643,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
