--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -603,7 +603,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/Shikhar Paudel/AppData/Local/Programs/Python/Python313/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Perform multivariate analysis\n",
     "# Create advanced visualizations showing multiple variables\n",
@@ -663,22 +674,20 @@
     "   - Sea Level Rise is correlated with increasing temperatures, reinforcing the idea that melting ice contributes to rising sea levels.\n",
     "   - Arctic Ice Area has a negative correlation with temperature, meaning higher global temperatures lead to reduced ice coverage.\n",
     "\n",
-    "# Multivariate Analysis:**\n",
+    "# Multivariate Analysis:\n",
     "   - A 3D scatter plot of CO₂, Temperature, and Sea Level Rise shows an upward trend, demonstrating how increasing CO₂ levels and rising temperatures together contribute to sea-level rise.\n",
     "   - The **pairwise comparisons** indicate complex interactions among all variables, showing that multiple climate factors are interconnected.\n",
     "\n",
     "4. **Implications:**\n",
     "   - The analysis confirms global warming trends and their severe consequences, such as rising sea levels and shrinking Arctic ice.\n",
     "   - If CO₂ emissions continue to rise, the cascading effects on climate could intensify, affecting ecosystems and coastal regions.\n",
-    "   - The findings support the urgent need for climate action, such as reducing emissions and protecting polar regions.\n",
-    "\n",
-    "Would you like me to refine or expand on any specific part? 🚀"
+    "   - The findings support the urgent need for climate action, such as reducing emissions and protecting polar regions."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -692,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
