minor error fixed

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -678,7 +678,7 @@
     "   - A 3D scatter plot of CO₂, Temperature, and Sea Level Rise shows an upward trend, demonstrating how increasing CO₂ levels and rising temperatures together contribute to sea-level rise.\n",
     "   - The **pairwise comparisons** indicate complex interactions among all variables, showing that multiple climate factors are interconnected.\n",
     "\n",
-    "4. **Implications:**\n",
+    "# Implications:\n",
     "   - The analysis confirms global warming trends and their severe consequences, such as rising sea levels and shrinking Arctic ice.\n",
     "   - If CO₂ emissions continue to rise, the cascading effects on climate could intensify, affecting ecosystems and coastal regions.\n",
     "   - The findings support the urgent need for climate action, such as reducing emissions and protecting polar regions."
