local tests passed

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
    ],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv('./data/Climate_Change_Indicators.csv') # Place the correct path to the file you are reading here (Make sure to load using the relative path)\n",
+    "df = pd.read_csv('data/Climate_Change_Indicators.csv') # Place the correct path to the file you are reading here (Make sure to load using the relative path)\n",
     "\n",
     "# Display the first few rows of the dataset\n",
     "df.head()"
@@ -985,7 +985,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Further Investigation\n",
+    "### 6. Suggestions for Further Investigation\n",
     "\n",
     "Based on the exploratory data analysis conducted, here are some areas for further investigation:\n",
     "\n",
