--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "# Set plot styling\n",
     "#plt.style.use('seaborn-v0_8-whitegrid')\n",
     "sns.set_palette('viridis')\n",
-    "%matplotlib inline"
+    "#%matplotlib inline"
    ]
   },
   {
